# internal/handler/file.go
@@ -4,11 +4,10 @@ package handler
 
 import (
 	"context"
-	"github.com/gin-gonic/gin"
 	"github.com/go-dev-frame/sponge/pkg/gin/middleware"
-	"net/http"
-	"school/internal/ecode"
-
+	"io"
+	"mime/multipart"
+	"os"
 	//"github.com/go-dev-frame/sponge/pkg/gin/middleware"
 
 	schoolV1 "school/api/school/v1"
@@ -16,8 +15,7 @@ import (
 
 var _ schoolV1.FileLogicer = (*fileHandler)(nil)
 
-type fileHandler struct {
-}
+type fileHandler struct{}
 
 // NewFileHandler create a handler
 func NewFileHandler() schoolV1.FileLogicer {
@@ -27,6 +25,37 @@ func NewFileHandler() schoolV1.FileLogicer {
 // CreateFile ......
 func (h *fileHandler) CreateFile(ctx context.Context, req *schoolV1.UploadFileRequest) (*schoolV1.UploadFileResponse, error) {
 	c, _ := middleware.AdaptCtx(ctx)
-	c.JSON(http.StatusOK, gin.H{"status": "Files uploaded successfully"})
-	return nil, ecode.SkipResponse
+	fh, err := c.FormFile("file")
+	if err != nil {
+		return nil, err
+	}
+	file, err := fh.Open()
+	defer func(file multipart.File) {
+		err := file.Close()
+		if err != nil {
+
+		}
+	}(file)
+	targetFile, err := os.OpenFile("uploads/"+fh.Filename, os.O_CREATE|os.O_WRONLY, 0666)
+	if err != nil {
+		return nil, err
+	}
+	defer func(targetFile *os.File) {
+		err := targetFile.Close()
+		if err != nil {
+		}
+	}(targetFile)
+	_, err = io.Copy(targetFile, file)
+	if err != nil {
+		return nil, err
+	}
+	fileinfo, err := os.Stat(targetFile.Name())
+	if err != nil {
+		return nil, err
+	}
+	return &schoolV1.UploadFileResponse{
+		FileId:   fileinfo.Name(),
+		FileName: fileinfo.Name(),
+		FileSize: fileinfo.Size(),
+	}, nil
 }
